Fixed second scrollbar issue

--- a/css/screen.css
+++ b/css/screen.css
@@ -283,6 +283,10 @@ footer {
   background-color: rgb(235, 235, 235);
 }
 
+main {
+  height: 100vh;
+}
+
 /*------------------------------------*\
   #OBJECTS
 \*------------------------------------*/
